# TinyBLE_Host

./: .gitignore  LICENSE  README.md
examples/stm32f103/: bluetooth_stack_nortos.ioc
examples/stm32f103/Core/Inc/: gpio.h  main.h  stm32f1xx_it.h
examples/stm32f103/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
examples/stm32f103/MDK-ARM/: bluetooth_stack_nortos.uvprojx
examples/windows/: CMakeLists.txt  config.h  main.c
platform/stm32f103/: phy_h4.c  phy_h4.h
platform/windows/: phy_h4.c  phy_h4.h
source/Server/: Server.c  Server.h
source/Server/Battery/: Battery.c  Battery.h
source/Server/Heart_Rate/: Heart_Rate.c  Heart_Rate.h
source/Server/Hid_mouse/: hid_mouse.c  hid_mouse.h
source/Server/Name/: ble_app_name.c  ble_app_name.h
source/Server/rdtss/: rdtss.c  rdtss.h
source/stack/: att.c  att.h  gap.c  gap.h  gatt.c  gatt.h  hci.c  hci.h  l2cap.c  l2cap.h  smp.c  smp.h  smp_key.c  smp_key.h
utils/btsnoop/: btsnoop.c  btsnoop.h
utils/fifo/: fifo.c  fifo.h
utils/timer/: tiny_timer.c  tiny_timer.h
